// Proto definition for API service.

syntax = "proto3";
package rarcproto;
option go_package = ".;proto";

message ResultsFromDB {
    string ASN = 1;
    string prefix = 2;
    int32 maxlen  = 3;
    string ta = 4;
    int32 mask = 5;
    string fullprefix = 7;
    string fullprefixrange = 8;
    repeated int64 unixtimearr = 9;
    repeated string RFC3339timearr = 10;
}

// ResultsFromDBRFC3339 was used before ResultsFromDB had human readable time
// included by default. This is therefore DEPRECATED and should NOT be used.
message ResultsFromDBRFC3339 {
    string ASN = 1;
    string prefix = 2;
    int32 maxlen  = 3;
    string ta = 4;
    int32 mask = 5;
    repeated string time = 6;
    string fullprefix = 7;
    string fullprefixrange = 8;
}


message ResultArr {
    repeated ResultsFromDB results = 1;
}

